<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    >

    <TextView
        android:text="@string/timkiemtheotinh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colortextdialog"/>
    <AutoCompleteTextView
        android:id="@+id/autocomplete"
        android:hint="@string/nhaptentinh"
        android:completionThreshold="1"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSearchTinh"
        android:text="@string/timkiem"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>