<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"

    >

    <TextView
        android:id="@+id/txtgioithieu"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/gioithieu"
        android:textAlignment="center"
        android:layout_marginTop="100dp"
        android:textColor="#566117"
        android:textSize="22sp"

        />
    <TableLayout
        android:id="@+id/i"
        android:gravity="center"
        android:layout_below="@+id/txtgioithieu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tendangnhap"
                android:textSize="22sp"
                />

            <EditText
                android:id="@+id/edtUser"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/matkhau"
                android:textSize="22sp"
                />

            <EditText
                android:id="@+id/edtmatkhau"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="22sp" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="22sp"
                />

            <EditText
                android:id="@+id/edtemail"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nhapcode"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/edtcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginTop="5dp"
                android:textSize="22sp" />

        </TableRow>
        <TableRow>
            <Button
                android:textAllCaps="false"
                android:id="@+id/btnnhancode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:duplicateParentState="true"
                android:layout_marginEnd="24dp"
                android:background="@color/colorbackgroundbutton"
                android:text="@string/nhancode"
                android:layout_column="1"
                />
        </TableRow>

    </TableLayout>

    <Button
        android:textAllCaps="false"
        android:id="@+id/btndangki"
        android:layout_marginTop="30dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/i"
        android:layout_marginEnd="33dp"
        android:textSize="30sp"
        android:background="@color/colorbackgroundbutton"
        android:text="@string/dangki" />

</RelativeLayout>