<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"

    >

    <TextView
        android:id="@+id/txtgioithieu"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/gioithieu"
        android:textAlignment="center"
        android:layout_marginTop="100dp"
        android:textColor="#566117"
        android:textSize="22sp"

        />
    <TableLayout
        android:id="@+id/i"
        android:gravity="center"
        android:layout_below="@+id/txtgioithieu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tendangnhap"
                android:textSize="22sp"
                />

            <EditText
                android:id="@+id/edtUser"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/matkhau"
                android:textSize="22sp"
                />

            <EditText
                android:id="@+id/edtmatkhau"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="22sp" />
        </TableRow>

    </TableLayout>

        <Button
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:textAllCaps="false"
            android:id="@+id/btndangnhap"
            android:layout_below="@+id/i"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_centerInParent="true"
            android:background="@color/colorbackgroundbutton"
            android:text="@string/xacnhan" />

            <Button
                android:layout_centerInParent="true"
                android:layout_below="@+id/btnxacnhan"
                android:textAllCaps="false"
                android:id="@+id/btndangki"
                android:layout_marginTop="30dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="33dp"
                android:textSize="30sp"
                android:background="@color/colorbackgroundbutton"
                android:text="@string/dangki" />


</RelativeLayout>