<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="50dp"
        android:text="@string/trangcanhan"
        android:textSize="30sp"
        android:layout_marginTop="0dp"
        android:textColor="@color/lightblue"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/anhDaiDien"
        android:layout_width="300px"
        android:layout_height="300px"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="220dp"
        android:layout_marginTop="200dp"
        android:src="@android:drawable/ic_menu_upload"/>
    <TableLayout
        android:id="@+id/Table"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/anhDaiDien"
        android:orientation="horizontal"
        android:stretchColumns="1"
        android:padding="40dp">
        <TableRow
            android:id="@+id/row1"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="3000dp">
            <TextView android:id="@+id/View1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Hoten"
                android:textSize="25sp"
                android:textColor="@color/lightblue"
                android:textStyle="italic"/>
            <TextView
                android:id="@+id/ViewHoTen"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:layout_marginLeft="5dp"
                android:paddingLeft="5dp"
                android:background="@drawable/custom_edit_text"
                android:textStyle="italic"/>
        </TableRow>
        <TableRow
            android:id="@+id/row2"
            android:layout_marginTop="10dp">
            <TextView android:id="@+id/View2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/NgaySinh"
                android:textSize="25sp"
                android:textColor="@color/lightblue"
                android:textStyle="italic"/>
            <TextView android:id="@+id/ViewNgaySinh"
                android:layout_marginLeft="5dp"
                android:paddingLeft="5dp"
                android:background="@drawable/custom_edit_text"
                android:layout_height="match_parent"
                android:textSize="25sp"/>
        </TableRow>
        <TableRow
            android:id="@+id/row3"
            android:layout_marginTop="10dp">
            <TextView android:id="@+id/View3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/GioiTinh"
                android:textSize="25sp"
                android:textColor="@color/lightblue"
                android:textStyle="italic"/>
            <TextView android:id="@+id/ViewGioiTinh"
                android:textSize="25sp"
                android:layout_marginLeft="5dp"
                android:paddingLeft="5dp"
                android:background="@drawable/custom_edit_text"
                android:layout_height="match_parent"/>
        </TableRow>
    </TableLayout>

</RelativeLayout>