<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   >
    <EditText
        android:id="@+id/edtTimKiem"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="17dp"
        android:layout_toLeftOf="@+id/btnSearch"
        android:hint="@string/noidungotimkiem"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="17dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_search"/>

    <ScrollView
        android:layout_below="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtTimKiem"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtTimKiem"
                android:orientation="horizontal"
                android:gravity="center">

                <android.support.v7.widget.CardView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:id="@+id/btnBaiBien"
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp"
                   >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/bien"
                            android:padding="10dp"/>

                        <TextView
                            android:id="@+id/txt"
                            android:textColor="@color/colortext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dulichbien"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:background="@color/colorbackgroundtext"
                            ></View>


                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/btnRungNui"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/r"
                            android:padding="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:textColor="@color/colortext"
                            android:layout_height="wrap_content"
                            android:text="@string/rungnui"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:background="@color/colorbackgroundtext"
                            ></View>


                    </LinearLayout>
                </android.support.v7.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtTimKiem"
            android:orientation="horizontal"
            android:gravity="center">

            <android.support.v7.widget.CardView
                android:id="@+id/btnLichSu"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/bt"
                        android:padding="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:textColor="@color/colortext"
                        android:layout_height="wrap_content"
                        android:text="@string/lichsu"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/colorbackgroundtext"
                        ></View>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/btnSinhThai"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/st"
                        android:padding="10dp"/>

                    <TextView
                        android:textColor="@color/colortext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sinhthai"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/colorbackgroundtext"
                        ></View>


                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtTimKiem"
            android:orientation="horizontal"
            android:gravity="center">

            <android.support.v7.widget.CardView
                android:id="@+id/btnMienTay"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/mt"
                        android:padding="10dp"/>

                    <TextView
                        android:textColor="@color/colortext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mientay"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/colorbackgroundtext"
                        ></View>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/btnTayBac"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/tb"
                        android:padding="10dp"/>

                    <TextView
                        android:textColor="@color/colortext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/taybac"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/colorbackgroundtext"
                        ></View>


                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/buttonXemThem"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="xem thêm."
        android:layout_marginRight="15dp"
        android:layout_alignParentRight="true"
        android:background="@color/white"/>

        <HorizontalScrollView
            android:layout_below="@+id/buttonXemThem"
            android:layout_width="match_parent"
            android:layout_height="300dp">
            <LinearLayout
                android:id="@+id/horizontal_XuHuong"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:orientation="horizontal">
            </LinearLayout>
        </HorizontalScrollView>

</RelativeLayout>
    </LinearLayout>
    </ScrollView>

<TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="0,1,2"
    android:padding="3dp"
    android:layout_alignParentBottom="true">
    <TableRow>
            <Button
                android:id="@+id/btnMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map"
                android:layout_marginLeft="10dp"
            />

            <Button
                android:id="@+id/btnXuHuong"
                android:text="@string/xuhuong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                />

            <Button
                android:id="@+id/btnCaNhan"
                android:text="@string/canhan"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                />
   </TableRow>
</TableLayout>
</RelativeLayout>